--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,6 +78,13 @@
                     android:text="@string/text_button_login"
                     android:theme="@style/RaisedButton"
                     android:onClick="goHome"/>
+                <com.facebook.login.widget.LoginButton
+                    android:id="@+id/login_facebook"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp" />
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
